tests/baselines/reference/unusedDestructuringParameters.errors.txt
tests/cases/compiler/unusedDestructuringParameters.ts(1,13): error TS6133: 'a' is declared but its value is never read.
tests/cases/compiler/unusedDestructuringParameters.ts(3,13): error TS6133: 'a' is declared but its value is never read.


==== tests/cases/compiler/unusedDestructuringParameters.ts (2 errors) ====
    const f = ([a]) => { };
                ~
!!! error TS6133: 'a' is declared but its value is never read.
    f([1]);
    const f2 = ({a}) => { };
                ~~~
!!! error TS6133: 'a' is declared but its value is never read.
    f2({ a: 10 });
    const f3 = ([_]) => { };
    f3([10]);